--- a/src/Card.css
+++ b/src/Card.css
@@ -2,7 +2,7 @@
   display: grid;
   gap: 20px;
   background: burlywood;
-  color: skyblue;
+  color: black;
   font-family: sans-serif;
   padding: 12px;
   border: none;
