Add question class visible/not visible and tags to Card

--- a/src/Card.css
+++ b/src/Card.css
@@ -32,3 +32,13 @@
 .hidden {
   display: none;
 }
+
+.Card__tags {
+  display: flex;
+  justify-content: space-around;
+  margin: 0;
+  list-style-type: none;
+  background: #886565;
+  border-radius: 5px;
+  padding: 12px;
+}
